[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/jump.wav" type="AudioStream" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/died.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/music.wav" type="AudioStream" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Planets" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="CV" type="CanvasLayer" parent="."]

[node name="StartScreen" type="Control" parent="CV"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CV/StartScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.0
margin_top = 61.0
margin_right = 314.0
margin_bottom = 109.0
rect_scale = Vector2( 3, 1.995 )
text = "Click on a planet to jump to it and recharge it.

Make sure no more than 3 planets dies per round!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CV/StartScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = -10.0
margin_right = 235.0
margin_bottom = 7.0
rect_scale = Vector2( 4, 4 )
custom_colors/font_color = Color( 0, 1, 0.145098, 1 )
custom_colors/font_color_shadow = Color( 0.662745, 0.662745, 0.662745, 1 )
text = "PLANET ENERGIZER"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiedAlready" type="Label" parent="CV/StartScreen"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = 179.0
margin_right = 319.0
margin_bottom = 227.0
rect_scale = Vector2( 3, 1.995 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Oof! You let more than 3 planets die that round :(
Better luck next time!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CV/StartScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 31.0
margin_top = 542.0
margin_right = 337.0
margin_bottom = 556.0
rect_scale = Vector2( 3, 1.995 )
text = "Made in < 3 hours for TriJam #65 by CodeNMore"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CV/StartScreen"]
margin_left = 420.0
margin_top = 391.0
margin_right = 473.0
margin_bottom = 411.0
rect_scale = Vector2( 4, 4 )
text = "BEGIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblRound" type="Label" parent="CV"]
margin_left = 3.0
margin_top = 5.0
margin_right = 122.0
margin_bottom = 19.0
rect_scale = Vector2( 2, 2 )
text = "Round 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblTime" type="Label" parent="CV"]
margin_left = 5.0
margin_top = 34.0
margin_right = 84.0
margin_bottom = 48.0
rect_scale = Vector2( 1.25, 1.25 )
text = "0.0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblDeath" type="Label" parent="CV"]
margin_left = 913.0
margin_top = 5.0
margin_right = 1032.0
margin_bottom = 19.0
rect_scale = Vector2( 1.25, 1.25 )
text = "Deaths: 0 / 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnStartNext" type="Button" parent="CV"]
visible = false
margin_left = 7.00003
margin_top = 536.0
margin_right = 126.0
margin_bottom = 556.0
rect_scale = Vector2( 3, 3 )
text = "Start Next Round"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Node2D" parent="."]

[node name="Jump" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 2 )
volume_db = -20.0

[node name="Die" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 4 )

[node name="Music" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 5 )
autoplay = true
[connection signal="pressed" from="CV/StartScreen/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CV/BtnStartNext" to="." method="_on_BtnStartNext_pressed"]
